--- a/data_clean.ipynb
+++ b/data_clean.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,10 +93,13 @@
     "    })\n",
     "\n",
     "# Save the processed data to a JSON file\n",
-    "with open(\"data/sample_5_percent.json\", \"w\") as f:\n",
-    "    json.dump(data, f, indent=4)\n",
+    "outfile = \"data/sample_5_percent.json\"\n",
+    "with open(outfile, \"w\") as f:\n",
+    "    for d in data:\n",
+    "        json.dump(data, f, indent=4)\n",
+    "        f.write(\"\\n\")\n",
     "\n",
-    "print(\"The dataset has been saved to 'data/sample_5_percent.json' with the specified format.\")"
+    "print(f\"The dataset has been saved to {outfile} with the specified format.\")"
    ]
   },
   {
