updated few shot prompt code

--- a/working.ipynb
+++ b/working.ipynb
@@ -172,11 +172,166 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "FzZwr7yXqmUZ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fetching 8 files:   0%|                                   | 0/8 [00:00<?, ?it/s]Downloading 'README.md' to 'models/pythia-160m/.cache/huggingface/download/README.md.2e8b2b93bf534833600f862c90c0b53fc6f76a46.incomplete'\n",
+            "Downloading 'special_tokens_map.json' to 'models/pythia-160m/.cache/huggingface/download/special_tokens_map.json.0204ed10c186a4c7c68f55dff8f26087a45898d6.incomplete'\n",
+            "Downloading 'pytorch_model.bin' to 'models/pythia-160m/.cache/huggingface/download/pytorch_model.bin.8d856725c4a8266f10568cc1269948fc851e2aed1fb230036af2eac68e9df072.incomplete'\n",
+            "\n",
+            "README.md: 100%|███████████████████████████| 13.6k/13.6k [00:00<00:00, 26.4MB/s]\u001b[A\n",
+            "Download complete. Moving file to models/pythia-160m/README.md\n",
+            "Downloading 'config.json' to 'models/pythia-160m/.cache/huggingface/download/config.json.b8368ff94f3bcf3088de5e9912251fc0208ae524.incomplete'\n",
+            "\n",
+            "special_tokens_map.json: 100%|███████████████| 99.0/99.0 [00:00<00:00, 1.16MB/s]\u001b[A\n",
+            "Download complete. Moving file to models/pythia-160m/special_tokens_map.json\n",
+            "Downloading 'tokenizer_config.json' to 'models/pythia-160m/.cache/huggingface/download/tokenizer_config.json.f1860edb10f80bcaf7b023fce47c68a23b724c23.incomplete'\n",
+            "\n",
+            "config.json: 100%|██████████████████████████████| 569/569 [00:00<00:00, 947kB/s]\u001b[A\n",
+            "Download complete. Moving file to models/pythia-160m/config.json\n",
+            "Downloading 'model.safetensors' to 'models/pythia-160m/.cache/huggingface/download/model.safetensors.29d2e457a664e41c12c735f20a36dc0956a665f614a54ce5db21a32e75965270.incomplete'\n",
+            "\n",
+            "tokenizer_config.json: 100%|███████████████████| 396/396 [00:00<00:00, 5.79MB/s]\u001b[A\n",
+            "Download complete. Moving file to models/pythia-160m/tokenizer_config.json\n",
+            "Downloading 'tokenizer.json' to 'models/pythia-160m/.cache/huggingface/download/tokenizer.json.f74dfbfab8f97770a87769c739fb080c21c8bacc.incomplete'\n",
+            "\n",
+            "model.safetensors:   0%|                             | 0.00/375M [00:00<?, ?B/s]\u001b[A\n",
+            "\n",
+            "tokenizer.json:   0%|                               | 0.00/2.11M [00:00<?, ?B/s]\u001b[A\u001b[ADownloading '.gitattributes' to 'models/pythia-160m/.cache/huggingface/download/.gitattributes.c7d9f3332a950355d5a77d85000f05e6f45435ea.incomplete'\n",
+            "\n",
+            "\n",
+            "\n",
+            ".gitattributes: 100%|██████████████████████| 1.48k/1.48k [00:00<00:00, 2.20MB/s]\u001b[A\u001b[A\u001b[A\n",
+            "Download complete. Moving file to models/pythia-160m/.gitattributes\n",
+            "Fetching 8 files:  12%|███▍                       | 1/8 [00:00<00:03,  2.32it/s]\n",
+            "\n",
+            "tokenizer.json: 100%|██████████████████████| 2.11M/2.11M [00:00<00:00, 9.86MB/s]\u001b[A\u001b[A\n",
+            "Download complete. Moving file to models/pythia-160m/tokenizer.json\n",
+            "\n",
+            "\n",
+            "pytorch_model.bin:   0%|                             | 0.00/375M [00:00<?, ?B/s]\u001b[A\u001b[A\n",
+            "model.safetensors:   3%|▌                   | 10.5M/375M [00:00<00:10, 34.4MB/s]\u001b[A\n",
+            "model.safetensors:   6%|█                   | 21.0M/375M [00:00<00:13, 25.6MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:   3%|▌                   | 10.5M/375M [00:00<00:18, 19.7MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:   8%|█▋                  | 31.5M/375M [00:01<00:14, 24.0MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:   6%|█                   | 21.0M/375M [00:01<00:21, 16.8MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  11%|██▏                 | 41.9M/375M [00:01<00:13, 24.3MB/s]\u001b[A\n",
+            "model.safetensors:  14%|██▊                 | 52.4M/375M [00:02<00:13, 24.4MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:   8%|█▋                  | 31.5M/375M [00:01<00:22, 15.5MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  17%|███▎                | 62.9M/375M [00:02<00:13, 23.6MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  11%|██▏                 | 41.9M/375M [00:02<00:21, 15.8MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  20%|███▉                | 73.4M/375M [00:03<00:13, 23.0MB/s]\u001b[A\n",
+            "model.safetensors:  22%|████▍               | 83.9M/375M [00:03<00:12, 22.6MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  14%|██▊                 | 52.4M/375M [00:03<00:20, 15.8MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  25%|█████               | 94.4M/375M [00:04<00:12, 22.4MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  17%|███▎                | 62.9M/375M [00:03<00:19, 16.4MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  28%|█████▊               | 105M/375M [00:04<00:12, 21.2MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  20%|███▉                | 73.4M/375M [00:04<00:17, 17.4MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  22%|████▍               | 83.9M/375M [00:04<00:15, 19.0MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  31%|██████▍              | 115M/375M [00:05<00:13, 19.0MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  25%|█████               | 94.4M/375M [00:05<00:14, 19.0MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  34%|███████              | 126M/375M [00:05<00:12, 19.4MB/s]\u001b[A\n",
+            "model.safetensors:  36%|███████▋             | 136M/375M [00:06<00:11, 20.7MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  28%|█████▊               | 105M/375M [00:06<00:15, 17.4MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  39%|████████▏            | 147M/375M [00:06<00:10, 21.2MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  31%|██████▍              | 115M/375M [00:06<00:15, 17.1MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  42%|████████▊            | 157M/375M [00:07<00:10, 21.4MB/s]\u001b[A\n",
+            "model.safetensors:  45%|█████████▍           | 168M/375M [00:07<00:09, 22.5MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  34%|███████              | 126M/375M [00:07<00:15, 15.6MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  48%|█████████▉           | 178M/375M [00:07<00:08, 23.4MB/s]\u001b[A\n",
+            "model.safetensors:  50%|██████████▌          | 189M/375M [00:08<00:07, 24.2MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  36%|███████▋             | 136M/375M [00:08<00:16, 14.4MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  53%|███████████▏         | 199M/375M [00:08<00:07, 24.7MB/s]\u001b[A\n",
+            "model.safetensors:  56%|███████████▋         | 210M/375M [00:09<00:06, 25.5MB/s]\u001b[A\n",
+            "model.safetensors:  59%|████████████▎        | 220M/375M [00:09<00:06, 25.6MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  39%|████████▏            | 147M/375M [00:09<00:17, 13.3MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  62%|████████████▉        | 231M/375M [00:09<00:05, 25.4MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  42%|████████▊            | 157M/375M [00:09<00:15, 13.9MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  64%|█████████████▌       | 241M/375M [00:10<00:05, 24.3MB/s]\u001b[A\n",
+            "model.safetensors:  67%|██████████████       | 252M/375M [00:10<00:05, 23.9MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  45%|█████████▍           | 168M/375M [00:10<00:14, 14.2MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  70%|██████████████▋      | 262M/375M [00:11<00:05, 22.3MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  48%|█████████▉           | 178M/375M [00:11<00:12, 15.5MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  50%|██████████▌          | 189M/375M [00:11<00:10, 17.1MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  73%|███████████████▎     | 273M/375M [00:12<00:05, 20.0MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  53%|███████████▏         | 199M/375M [00:12<00:09, 18.0MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  75%|███████████████▊     | 283M/375M [00:12<00:04, 19.8MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  56%|███████████▋         | 210M/375M [00:12<00:09, 17.9MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  78%|████████████████▍    | 294M/375M [00:13<00:04, 20.0MB/s]\u001b[A\n",
+            "model.safetensors:  81%|█████████████████    | 304M/375M [00:13<00:03, 21.5MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  59%|████████████▎        | 220M/375M [00:13<00:09, 16.2MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  84%|█████████████████▌   | 315M/375M [00:13<00:02, 22.3MB/s]\u001b[A\n",
+            "model.safetensors:  87%|██████████████████▏  | 325M/375M [00:14<00:02, 23.1MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  62%|████████████▉        | 231M/375M [00:14<00:09, 15.3MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  89%|██████████████████▊  | 336M/375M [00:14<00:01, 23.4MB/s]\u001b[A\n",
+            "model.safetensors:  92%|███████████████████▍ | 346M/375M [00:15<00:01, 23.2MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  64%|█████████████▌       | 241M/375M [00:15<00:08, 15.3MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  95%|███████████████████▉ | 357M/375M [00:15<00:00, 22.1MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  67%|██████████████       | 252M/375M [00:15<00:07, 16.2MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors:  98%|████████████████████▌| 367M/375M [00:16<00:00, 20.8MB/s]\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  70%|██████████████▋      | 262M/375M [00:16<00:06, 17.1MB/s]\u001b[A\u001b[A\n",
+            "model.safetensors: 100%|█████████████████████| 375M/375M [00:16<00:00, 22.2MB/s]\u001b[A\n",
+            "Download complete. Moving file to models/pythia-160m/model.safetensors\n",
+            "Fetching 8 files:  50%|█████████████▌             | 4/8 [00:17<00:18,  4.61s/it]\n",
+            "\n",
+            "pytorch_model.bin:  73%|███████████████▎     | 273M/375M [00:16<00:05, 18.2MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  75%|███████████████▊     | 283M/375M [00:16<00:04, 21.5MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  78%|████████████████▍    | 294M/375M [00:17<00:03, 23.4MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  81%|█████████████████    | 304M/375M [00:17<00:02, 23.9MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  84%|█████████████████▌   | 315M/375M [00:17<00:02, 26.7MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  87%|██████████████████▏  | 325M/375M [00:18<00:01, 29.3MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  89%|██████████████████▊  | 336M/375M [00:18<00:01, 31.4MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  92%|███████████████████▍ | 346M/375M [00:18<00:00, 33.0MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  95%|███████████████████▉ | 357M/375M [00:19<00:00, 26.8MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin:  98%|████████████████████▌| 367M/375M [00:19<00:00, 28.5MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "pytorch_model.bin: 100%|█████████████████████| 375M/375M [00:19<00:00, 18.8MB/s]\u001b[A\u001b[A\n",
+            "Download complete. Moving file to models/pythia-160m/pytorch_model.bin\n",
+            "Fetching 8 files: 100%|███████████████████████████| 8/8 [00:20<00:00,  2.56s/it]\n",
+            "/mnt/c/Documents/Admin/CMU_Masters_admin/Module_Stuff/11667_LLMs/homework6/models/pythia-160m\n"
+          ]
+        }
+      ],
       "source": [
         "!mkdir -p models/pythia-160m\n",
         "!huggingface-cli download EleutherAI/pythia-160m --local-dir ./models/pythia-160m\n",
@@ -197,13 +352,6 @@
       "source": [
         "!wandb login 7077b7416aa6d8dd6e87ab0b9150b82abed30bd1"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
